# LlamaEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json
3rd/: CMakeLists.txt
3rd/libtorch/: download.cmd  download.sh
llama_torch/: llama_torch.hpp  model_struct.excalidraw  test.ipynb
src/: main.cpp
test/: CMakeLists.txt  llama_torch_attention_test.cpp  llama_torch_rotary_embedding_test.cpp  llama_torch_test.cpp
